# hermes

./: .gitignore  Cargo.toml  Makefile
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/core/: game.rs  player.rs  turn.rs
engine/src/core/runner/: runner.rs  statistics_runner_event_sink.rs
engine/src/game/: mod.rs
engine/src/game/boop/: action.rs  action_encoder.rs  boop.rs  mod.rs  state_encoder.rs
engine/src/game/tic_tac_toe/: action.rs  action_encoder.rs  mod.rs  state_encoder.rs  tic_tac_toe.rs
engine/src/neural_network/: action_encoder.rs  mod.rs  neural_network.rs  onnx.rs  random.rs  state_encoder.rs
engine/src/player/: manual.rs  minimax.rs  mod.rs  random.rs
engine/src/player/mcts/: classic.rs  mcts.rs  neural_network.rs  noise.rs  tree.rs
engine/src/player/mcts/evaluator/: evaluator.rs  neural_network.rs  rollout.rs
engine/src/player/mcts/expander/: expander.rs  mod.rs  random.rs
engine/src/player/mcts/scorer/: mod.rs  puct.rs
engine/src/self_play/: json_sample_sink.rs  sample.rs  sample_runner_event_sink.rs
src/: lib.rs
src/core/: evaluation.rs  event.rs  game.rs  mod.rs  player.rs  turn.rs
src/core/event/: mod.rs  null_event_sink.rs
src/core/runner/: mod.rs  null_sink.rs  runner.rs  statistics_runner_event_sink.rs  statistics_sink.rs  stdout_runner_event_sink.rs  stdout_sink.rs
src/game/: mod.rs
src/game/boop/: action.rs  action_encoder.rs  boop.rs  mod.rs  state_encoder.rs
src/game/tic_tac_toe/: action.rs  action_encoder.rs  mod.rs  state_encoder.rs  tic_tac_toe.rs
src/neural_network/: action_encoder.rs  mod.rs  neural_network.rs  onnx.rs  random.rs  state_encoder.rs
src/player/: minimax.rs  mod.rs  random.rs
src/player/mcts/: classic.rs  mcts.rs  mod.rs  neural_network.rs  noise.rs  temperature.rs  tree.rs
src/player/mcts/evaluator/: evaluator.rs  mod.rs  neural_network.rs  rollout.rs
src/player/mcts/expander/: complete.rs  expander.rs  mod.rs  random.rs
src/player/mcts/scorer/: mod.rs  puct.rs  scorer.rs  ucb1.rs
src/self_play/: json_sink.rs  mod.rs  sample_runner_event_sink.rs  sample_sink.rs
src/strategy/: mod.rs  random.rs
src/strategy/mcts/: classic.rs  mcts.rs  mod.rs
src/strategy/mcts/evaluator/: evaluator.rs  mod.rs  rollout.rs
src/strategy/mcts/expander/: complete.rs  expander.rs  random.rs
src/strategy/mcts/scorer/: puct.rs  scorer.rs  ucb1.rs
training/: .gitignore  pyproject.toml
training/src/boop/: data.py  network.py  train.py
wasm/: Cargo.toml
wasm/src/: lib.rs  player.rs
wasm/src/game/: boop.rs  mod.rs  outcome.rs  tic_tac_toe.rs  turn.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.tsx  routeTree.gen.ts
web/src/components/: layout.tsx  sidebar.tsx  theme-toggle.tsx
web/src/components/boop/: board.tsx  index.tsx  player.tsx
web/src/components/tic-tac-toe/: index.tsx
web/src/routes/: __root.tsx  index.tsx
web/src/routes/games/: boop.tsx  tic-tac-toe.tsx
