[package]
name = "hermes"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ndarray = "0.16"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
