[package]
name = "hermes"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ort = { version = "2.0.0-rc.11" }
rand = "0.8.0"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
too_many_lines = "allow"
