
[package]
name = "hermes-engine"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
rand = "0.10.0"
rand_distr = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tract-onnx = "0.22.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
too_many_lines = "allow"
