[project]
name = "training"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "onnx>=1.17.0",
    "onnxscript>=0.1.0",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.2",
]
