[package]
name = "hermes-wasm"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
hermes-engine = { path = "../engine" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2.111"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
