[package]
name = "hermes-wasm"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
hermes-engine = { path = "../engine" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.114"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
